Update for dnd52 5.2, cleanup v13, added Ki

--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,17 @@
   "midi-item-showcase-community": {
     "ElwinHelpersRequired": "The Elwin Helpers setting must be enabled.",
     "ElwinHelpersName": "Use Elwin Helpers",
-    "ElwinHelpersHint": "Enabling this will enable automations that rely on Elwin's Helper Script"
+    "ElwinHelpersHint": "Enabling this will enable automations that rely on Elwin's Helper Script",
+    "Goodberry": {
+      "BatchIdFormat": {
+        "Name": "Goodberry Batch Format",
+        "Hint": "Format of batch id added as suffix to the created berries.",
+        "Choices": {
+          "default": "Default calendar format (timestamp)",
+          "uid": "Unique ID",
+          "none": "No batch id"
+        }
+      }
+    }
   }
 }
